--- a/src/index.html
+++ b/src/index.html
@@ -73,7 +73,136 @@
     </section>
 
     <section class="reasons">
-        
+        <div class="container">
+            <div class="title__blocks reasons__title-blocks">преимущества</div>
+            <h2 class="title title__reasons">8 причин начать работать с нами</h2>
+
+            <div class="reasons__wrapper">
+                <div class="reasons__item">
+                    <div class="reasons__round">
+                        <img src="icons/reasons/icon1.png" alt="icon1" class="reasons__icon">
+                    </div>
+                    <div class="reasons__text">
+                        <div class="reasons__subtitle">Никаких наличных, оплата происходит автоматически</div>
+                        <div class="reasons__descr">Стоимость поездки оплачивается пассажиром с привязанной банковской карты, т.е. нет никаких рисков связанных с перевозкой наличности как для пассажира, так и для водителя, Вам не нужно искать мелкие деньги для размена.</div>
+                    </div>
+                </div>
+                <div class="reasons__item">
+                    <div class="reasons__round">
+                        <img src="icons/reasons/icon2.png" alt="icon2" class="reasons__icon">
+                    </div>
+                    <div class="reasons__text">
+                        <div class="reasons__subtitle">Комиссия 8% + БОНУСЫ</div>
+                        <div class="reasons__descr">У нас минимальная комиссия и мы выплачиваем бонусы за каждую поездку, некоторые наши конкуренты оставляют бонусы себе. Мы работаем честно и с нами водители зарабатывают больше!</div>
+                    </div>
+                </div>
+                <div class="reasons__item">
+                    <div class="reasons__round">
+                        <img src="icons/reasons/icon3.png" alt="icon3" class="reasons__icon">
+                    </div>
+                    <div class="reasons__text">
+                        <div class="reasons__subtitle">Высокий доход с гарантированными выплатами</div>
+                        <div class="reasons__descr">Мы выплачиваем заработную плату на личную банковскую карту водителя! Вам не нужно оформлять ООО, ИП, платить налоги, подавать декларацию, оплачивать бухгалтерские услуги и ведение банковского счета.</div>
+                    </div>
+                </div>
+                <div class="reasons__item">
+                    <div class="reasons__round">
+                        <img src="icons/reasons/icon4.png" alt="icon4" class="reasons__icon">
+                    </div>
+                    <div class="reasons__text reasons__text_mt10">
+                        <div class="reasons__subtitle">Работа в удобное время, никаких графиков</div>
+                        <div class="reasons__descr">Вы просто нажимаете кнопку выйти на линию для начала работы, когда решите закончить, нажимаете выйти с линии. Вы можете подраба-
+                        тывать только утром, вечером, в выходные или праздничные дни! </div>
+                    </div>
+                </div>
+                <div class="reasons__item">
+                    <div class="reasons__round">
+                        <img src="icons/reasons/icon5.png" alt="icon5" class="reasons__icon">
+                    </div>
+                    <div class="reasons__text">
+                        <div class="reasons__subtitle">Комфортное, прозрачное и простое подключение</div>
+                        <div class="reasons__descr">Мы подключаем дистанционно и бесплатно, Вам нет необходимости приезжать к нам! Вы присылаете нам копии документов, мы регистрируем Вас и присылаем данные для подключения, через 1-2 дня Вы можете начинать работать!</div>
+                    </div>
+                </div>
+                <div class="reasons__item">
+                    <div class="reasons__round">
+                        <img src="icons/reasons/icon6.png" alt="icon6" class="reasons__icon">
+                    </div>
+                    <div class="reasons__text">
+                        <div class="reasons__subtitle">Всегда большое количество заказов</div>
+                        <div class="reasons__descr">Приложение показывает, где на данный момент больше всего заказов и где действуют повышенные тарифы. У Вас не будет простоя и холостых пробегов. Наши пассажиры всегда приятные и абсолютно неконфликтные люди, которых приятно возить.</div>
+                    </div>
+                </div>
+                <div class="reasons__item">
+                    <div class="reasons__round">
+                        <img src="icons/reasons/icon7.png" alt="icon7" class="reasons__icon">
+                    </div>
+                    <div class="reasons__text">
+                        <div class="reasons__subtitle">Круглосуточная поддержка</div>
+                        <div class="reasons__descr">В Uber действует круглосуточная поддержка водителей по электронной почте. Если что-то непонятно, Вы всегда можете задать вопрос через On-line консультацию.</div>
+                    </div>
+                </div>
+                <div class="reasons__item">
+                    <div class="reasons__round">
+                        <img src="icons/reasons/icon8.png" alt="icon8" class="reasons__icon">
+                    </div>
+                    <div class="reasons__text reasons__text_mt15">
+                        <div class="reasons__subtitle">Без шашечек и наклеек</div>
+                        <div class="reasons__descr">Вам не нужно менять цвет, устанавливать «шашки» на автомобиль и обклеивать его наклейками.</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="mobile">
+        <div class="container">
+            <div class="title__blocks mobile__title-blocks">возможности</div>
+            <h2 class="title title__mobile">мобильное приложение убер</h2>
+            <div class="mobile__subtitle">Сделайте заказ, совершите поездку и оплатите ее стоимость, используя свой мобильный телефон</div>
+
+            <div class="mobile__wrapper">
+                <div class="mobile__item mobile__item_1">
+                    <div class="mobile__header">оформление заказа одним касанием</div>
+                    <div class="mobile__round">
+                        <div class="mobile__plus"></div>
+                    </div>
+                </div>
+                <div class="mobile__item mobile__item_2">
+                    <div class="mobile__header">надежная подача</div>
+                    <div class="mobile__round">
+                        <div class="mobile__plus"></div>
+                    </div>
+                </div>
+                <div class="mobile__item mobile__item_3">
+                    <div class="mobile__header">прозрачные цены</div>
+                    <div class="mobile__round">
+                        <div class="mobile__plus"></div>
+                    </div>
+                </div>
+                <div class="mobile__item mobile__item_4">
+                    <div class="mobile__header">безналичная оплата</div>
+                    <div class="mobile__round">
+                        <div class="mobile__plus"></div>
+                    </div>
+                </div>
+                <div class="mobile__item mobile__item_5">
+                    <div class="mobile__header">обратная связь</div>
+                    <div class="mobile__round">
+                        <div class="mobile__plus"></div>
+                    </div>
+                </div>
+                <div class="mobile__item mobile__item_6">
+                    <div class="mobile__header">разделить стоимость поездки</div>
+                    <div class="mobile__round">
+                        <div class="mobile__plus"></div>
+                    </div>
+                </div>
+            </div>
+
+            
+
+        </div>
     </section>
 </body>
 </html>
