step_4_choice_completed

--- a/src/index.html
+++ b/src/index.html
@@ -199,10 +199,22 @@
                     </div>
                 </div>
             </div>
-
-            
-
         </div>
+    </section>
+
+    <section class="choice">
+            <div class="choice__black">
+                <div class="title__blocks choice__title-blocks">возможности</div>
+                <h2 class="title title__choice">Выбор - отличная штука!</h2>
+                <div class="choice__subtitle">Закажите автомобиль, который подходит вам по стилю и бюджету</div>
+            </div>
+            <img src="img/car.png" alt="car" class="choice__img">
+            <div class="choice__white">
+                <img src="img/car_bg.png" alt="car__bg" class="choice__back">
+                <div class="choice__text">
+                    Машины на каждый день. <br> Лучше, быстрее и дешевле, чем такси    
+                </div>
+            </div>
     </section>
 </body>
 </html>
