step_5_conditions_and_world_completed, footer_completed_all_but_not_icon_fonts

--- a/src/index.html
+++ b/src/index.html
@@ -204,7 +204,7 @@
 
     <section class="choice">
             <div class="choice__black">
-                <div class="title__blocks choice__title-blocks">возможности</div>
+                <div class="title__blocks title__blocks-choice">возможности</div>
                 <h2 class="title title__choice">Выбор - отличная штука!</h2>
                 <div class="choice__subtitle">Закажите автомобиль, который подходит вам по стилю и бюджету</div>
             </div>
@@ -216,5 +216,101 @@
                 </div>
             </div>
     </section>
+
+    <section class="conditions">
+        <div class="container">
+            <div class="title__blocks conditions__title-blocks">возможности</div>
+            <h2 class="title title__conditions">условия и требования</h2>
+
+            <div class="conditions__wrapper">
+                <div class="conditions__block">
+                    <div class="conditions__header">УСЛОВИЯ: со своим авто:</div>
+                    <ul class="conditions__menu">
+                        <li class="conditions__item">Подключаем к системе UBER  под 10%.</li>
+                        <li class="conditions__item">Ни каких взносов  0%!</li>
+                        <li class="conditions__item">Можем подключать удаленно без приезда в офис</li>
+                        <li class="conditions__item">ИП не требуется</li>
+                        <li class="conditions__item">Заказы распределяются без учета рейтинга ближайшим водителям</li>
+                        <li class="conditions__item">Работа только по безналичному расчету</li>
+                        <li class="conditions__item">Деньги перечисляем на карту водителю или наличными в офисе</li>
+                    </ul>
+                    <div class="conditions__text">В день заработок составляет 7000-12000р + бонус 3000т  <br> рублей</div>
+                </div>
+                <div class="conditions__block">
+                    <div class="conditions__header">УСЛОВИЯ: на авто компании:</div>
+                    <ul class="conditions__menu">
+                        <li class="conditions__item">Предоставляем авто без залога</li>
+                        <li class="conditions__item">Без ежедневных выплат по аренде</li>
+                        <li class="conditions__item">Среда пятница и суббота работа на компанию остальные дни вы работаете на себя</li>
+                    </ul> 
+                </div>
+                <div class="conditions__block">
+                    <div class="conditions__header red">ТРЕБОВАНИЕ:</div>
+                    <ul class="conditions__menu">
+                        <li class="conditions__item red">Наличие автомобиля без рекламы</li>
+                        <li class="conditions__item red">Автомобиль не должен быть желтый и не с желтыми номерами</li>
+                        <li class="conditions__item red">Машина не старше 3 лет</li>
+                        <li class="conditions__item red">Стаж вождения не менее 3 лет</li>
+                        <li class="conditions__item red">Девайс на системе андроид 4.0 и выше(самсунг)</li>
+                    </ul>
+                </div>
+                <div class="conditions__block">
+                    <div class="conditions__header red">ДОКУМЕНТЫ:</div>
+                    <ul class="conditions__menu">
+                        <li class="conditions__item red ">Права 2 стороны</li>
+                        <li class="conditions__item red">Паспорт лицевая сторона</li>
+                        <li class="conditions__item red">СтС</li>
+                        <li class="conditions__item red">Лицензия (если есть)</li>
+                        <li class="conditions__item red">Номер телефона</li>
+                        <li class="conditions__item red">Номер карты для перечисления денег(указать в письме)!</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="world">
+        <div class="container">
+            <div class="title__blocks title__blocks-white">города</div>
+            <h2 class="title title__world">По всему миру</h2>
+            <div class="world__subtitle">Мы в вашем городе и по всему миру</div>
+        </div>
+        <a href="#" class="world__link">посмотреть все города</a>
+    </section>
+
+    <footer class="footer">
+        <div class="footer__divider"></div>
+        <div class="footer__wrapper">
+            <div class="footer__social">
+                <a class="footer__social-item"><span class="icon-facebook-with-circle"></span></a>
+                <a class="footer__social-item"><span class="icon-twitter-with-circle"></span></a>
+                <a class="footer__social-item"><span class="icon-linkedin-with-circle"></span></a>
+                <a class="footer__social-item"><span class="icon-instagram-with-circle"></span></a>
+            </div>
+            <div class="footer__menu">
+                <div class="footer__main">
+                    <a href="#" class="footer__link">на главную</a>
+                    <a href="#" class="footer__link">города</a>
+                    <a href="#" class="footer__link">для водителей</a>
+                </div>
+                <div class="footer__other">
+                    <a href="#" class="footer__link">центр поддержки</a>
+                    <a href="#" class="footer__link">вакансии</a>
+                    <a href="#" class="footer__link">разработчики</a>
+                    <a href="#" class="footer__link">блог</a>
+                    <a href="#" class="footer__link">о нас</a>
+                </div>
+                <a href="#" class="footer__lang">Русский</a>
+
+            </div>
+            <div class="footer__market">
+                <a href="#" class="footer__market-link"><img src="icons/app.png" alt="appstore" class="footer__photo"></a>
+                <a href="#" class="footer__market-link"><img src="icons/google_play.png" alt="google_play" class="footer__photo"></a>
+                <a href="#" class="footer__market-link"><img src="icons/wind_store.png" alt="windows" class="footer__photo"></a>
+            </div>
+        </div>
+    </footer>
+
+
 </body>
 </html>
