step_6_main_part_ready_responsive__part_straight_ahead

--- a/src/index.html
+++ b/src/index.html
@@ -282,10 +282,10 @@
         <div class="footer__divider"></div>
         <div class="footer__wrapper">
             <div class="footer__social">
-                <a class="footer__social-item"><span class="icon-facebook-with-circle"></span></a>
-                <a class="footer__social-item"><span class="icon-twitter-with-circle"></span></a>
-                <a class="footer__social-item"><span class="icon-linkedin-with-circle"></span></a>
-                <a class="footer__social-item"><span class="icon-instagram-with-circle"></span></a>
+                <a href="#" class="footer__social-item"><span class="icon-facebook"></span></a>
+                <a href="#" class="footer__social-item"><span class="icon-twitter"></span></a>
+                <a href="#" class="footer__social-item"><span class="icon-linkedin"></span></a>
+                <a href="#" class="footer__social-item"><span class="icon-instagram"></span></a>
             </div>
             <div class="footer__menu">
                 <div class="footer__main">
